--- a/home.css
+++ b/home.css
@@ -39,13 +39,21 @@ main .filter-options{
     background-color: var(--White);
     width: 100%;
     border-radius: 5px;
-    box-shadow: 8px 0px 20px 3px var(--LightShadowColor);
-    display: none;
+    box-shadow: 0px 0px 10px 0px var(--LightShadowColor) ;
 }
 
 .menu .item{
-    padding: 3px 0;
+    width: 100%;
+    padding: 5px 0;
     font-weight: 600;
+}
+
+.dark .menu .item:active{
+  background: var(--DarkestBlue);
+}
+
+.light .menu .item:active{
+  background: var(--LightShadowColor);
 }
 
 main .country-list{
@@ -58,7 +66,7 @@ main .country-list{
 .country-list .country{
     display: flex;
     flex-direction: column;
-    box-shadow: 8px 0px 20px 3px var(--LightShadowColor);
+    box-shadow: 0px 0px 10px 0px var(--LightShadowColor) ;
     border-radius: 10px;
     overflow: hidden;
     cursor: pointer;
